--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -15,7 +15,8 @@ html
     = stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload'
     = javascript_include_tag 'application', 'data-turbolinks-track': 'reload'
   body
-    = render 'shared/navbar'
-    .container.mb-4
+    .sticky-top
+      = render 'shared/navbar'
+    .container.my-4
       = render 'shared/breadcrumb'
       = yield
