--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -2,6 +2,8 @@ doctype html
 html
   head
     meta content='text/html; charset=UTF-8' http-equiv='Content-Type'
+    meta name='viewport' content='width=device-width, initial-scale=1, shrink-to-fit=no'
+    meta name='format-detection' content='telephone=no'
     title
       = yield(:title) + ' | ' if content_for?(:title)
       |Title
