--- a/app/views/shared/_navbar.html.slim
+++ b/app/views/shared/_navbar.html.slim
@@ -4,10 +4,12 @@ nav.navbar.navbar-expand-lg.navbar-dark.bg-dark
     span.navbar-toggler-icon
   #navbarToggler.collapse.navbar-collapse
     ul.navbar-nav.mr-auto.mt-2.mt-lg-0
-      li.nav-item.active
-        a.nav-link href='#' Home
+      li.nav-item
+        = link_to 'Book List', books_path, class: 'nav-link'
       li.nav-item
         a.nav-link href='#' Link
+      li.nav-item.active
+        a.nav-link href='#' Active Link
       li.nav-item
         a.nav-link.disabled href='#' tabindex='-1' Disabled
     form.form-inline.my-2.my-lg-0
