Add flash message

--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -20,6 +20,7 @@ html
   body
     .sticky-top
       = render 'shared/navbar'
-    .container.my-4
+    .container.mt-3.mb-5
+      = render 'shared/flash_message'
       = render 'shared/breadcrumb'
       = yield
