--- a/app/views/books/index.html.slim
+++ b/app/views/books/index.html.slim
@@ -1,21 +1,23 @@
 - content_for :title, 'Book List'
 - breadcrumb :books
 
-.table-sticky.vh-70
-  table.table
-    thead
-      tr
-        th.sticky-left Name
-        th Price
-        th Release date
-        th colspan=2
-    tbody
-      - @books.each do |book|
+= render_with_pagination @books do |books|
+
+  .table-sticky.vh-70
+    table.table
+      thead
         tr
-          td.sticky-left= book.name
-          td= book.price
-          td= book.release_date
-          td.btn-cell= edit_link_to 'Edit', edit_book_path(book)
-          td.btn-cell= delete_link_to 'Destroy', book
+          th.sticky-left Name
+          th Price
+          th Release date
+          th colspan=2
+      tbody
+        - books.each do |book|
+          tr
+            td.sticky-left= book.name
+            td= book.price
+            td= book.release_date
+            td.btn-cell= edit_link_to 'Edit', edit_book_path(book)
+            td.btn-cell= delete_link_to 'Destroy', book
 
 = new_link_to 'New Book', new_book_path
