--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -12,6 +12,9 @@
  *
  */
 
+@import 'font-awesome-sprockets';
+@import 'font-awesome';
+
 @import './bootstrap/desktop';
 @import './bootstrap/form';
 @import './bootstrap/table';
