--- a/app/views/kaminari/_paginator.html.slim
+++ b/app/views/kaminari/_paginator.html.slim
@@ -21,13 +21,17 @@
   nav.d-md-none
     ul.pagination
       li.page-item.flex-fill.text-center class=('disabled' if current_page.first?)
-        = link_to icon('fas', 'angle-double-left'), first_page_url, class: 'page-link'
+        a.page-link href=first_page_url
+          i.fas.fa-angle-double-left
       li.page-item.flex-fill.text-center class=('disabled' if current_page.first?)
-        = link_to icon('fas', 'angle-left'), prev_page_url, class: 'page-link'
+        a.page-link href=prev_page_url
+          i.fas.fa-angle-left
       li.page-item.flex-fill.text-center.disabled
         span.page-link
           = "#{format_number current_page.number} / #{format_number total_page}"
       li.page-item.flex-fill.text-center class=('disabled' if current_page.last?)
-        = link_to icon('fas', 'angle-right'), next_page_url, class: 'page-link'
+        a.page-link href=next_page_url
+          i.fas.fa-angle-right
       li.page-item.flex-fill.text-center class=('disabled' if current_page.last?)
-        = link_to icon('fas', 'angle-double-right'), last_page_url, class: 'page-link'
+        a.page-link href=last_page_url
+          i.fas.fa-angle-double-right
