--- a/app/views/books/index.html.slim
+++ b/app/views/books/index.html.slim
@@ -1,6 +1,14 @@
 - content_for :title, 'Book List'
 - breadcrumb :books
 
+.d-flex.justify-content-between
+  form.flex-fill.form-group
+    .form-row
+      .col-10.col-md-5.p-0
+        = search_field_tag 'q', params[:q], placeholder: 'Search'
+  div
+    = new_link_to 'New', new_book_path
+
 = render_with_pagination @books do |books|
   .table-sticky.vh-70
     table.table
@@ -17,6 +25,5 @@
             td= book.price
             td= book.release_date
             td.btn-cell= edit_link_to 'Edit', edit_book_path(book)
-            td.btn-cell= delete_link_to 'Destroy', book
+            td.btn-cell= delete_link_to 'Delete', book
 
-= new_link_to 'New Book', new_book_path
