Fix form example

--- a/app/views/root/index.html.slim
+++ b/app/views/root/index.html.slim
@@ -90,9 +90,9 @@ h3 Form
   .form-group
     label Password
     input.form-control type='password' placeholder='Password'
-  .form-group.form-check
+  .form-group
     label
-      input.form-check-input type='checkbox'
+      input type='checkbox'
       span Check me out
   button.btn.btn-md.btn-primary type='submit' Submit
 
@@ -102,7 +102,7 @@ h3 Form
       label date
       div.d-flex.align-items-center
         input.form-control type='date'
-        span 〜
+        .mx-2 〜
         input.form-control type='date'
     .form-group
       button.btn.btn-dark today
