--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -16,6 +16,7 @@
 @import './bootstrap/desktop';
 @import './bootstrap/form';
 @import './bootstrap/table';
+@import './checkbox';
 
 html, body{
   height: 100%;
