--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -18,8 +18,12 @@
 @import './bootstrap/table';
 @import './checkbox';
 
-html, body{
+html{
   height: 100%;
+}
+
+body{
+  min-height: 100%;
 }
 
 @for $i from 1 through 10 {
