--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -26,7 +26,13 @@ body{
   min-height: 100%;
 }
 
-@for $i from 1 through 10 {
-  .vw-#{$i * 10} { width: #{$i * 10}vw !important; }
-  .vh-#{$i * 10} { height: #{$i * 10}vh !important; }
+@for $i from 1 through 20 {
+  .vw-#{$i * 5} { width: #{$i * 5}vw !important; }
+  .vh-#{$i * 5} { height: #{$i * 5}vh !important; }
+
+  .min-vw-#{$i * 5} { min-width: #{$i * 5}vw !important; }
+  .min-vh-#{$i * 5} { min-height: #{$i * 5}vh !important; }
+
+  .max-vw-#{$i * 5} { max-width: #{$i * 5}vw !important; }
+  .max-vh-#{$i * 5} { max-height: #{$i * 5}vh !important; }
 }
