--- a/app/views/books/index.html.slim
+++ b/app/views/books/index.html.slim
@@ -10,7 +10,7 @@
     = new_link_to 'New', new_book_path
 
 = render_with_pagination @books do |books|
-  .table-sticky.vh-70
+  .table-sticky.max-vh-70
     table.table
       thead
         tr
@@ -26,4 +26,3 @@
             td= book.release_date
             td.btn-cell= edit_link_to 'Edit', edit_book_path(book)
             td.btn-cell= delete_link_to 'Delete', book
-
