Add css class table-hover

--- a/app/views/books/index.html.slim
+++ b/app/views/books/index.html.slim
@@ -11,7 +11,7 @@
 
 = render_with_pagination @books do |books|
   .table-sticky.max-vh-70
-    table.table
+    table.table.table-striped.table-hover
       thead
         tr
           th.sticky-left Name
