--- a/app/assets/stylesheets/bootstrap/table.scss
+++ b/app/assets/stylesheets/bootstrap/table.scss
@@ -96,4 +96,15 @@ $border-color: #dee2e6;
     }
   }
 
+  .table-hover{
+    tbody{
+      tr:hover{
+        background: none;
+        th, td{
+          background-color: rgba(0, 0, 0, .075);
+        }
+      }
+    }
+  }
+
 }
