--- a/app/views/shared/_navbar.html.slim
+++ b/app/views/shared/_navbar.html.slim
@@ -12,6 +12,14 @@ nav.navbar.navbar-expand-lg.navbar-dark.bg-dark
         a.nav-link href='#' Active Link
       li.nav-item
         a.nav-link.disabled href='#' tabindex='-1' Disabled
-    form.form-inline.my-2.my-lg-0
-      input.form-control.mr-sm-2 type='search' placeholder='Search'
-      button.btn.btn-outline-success.my-2.my-sm-0 type='submit' Search
+    .navbar-nav
+      - if user_signed_in?
+        .dropdown
+          button.btn.btn-md.btn-secondary.dropdown-toggle type='button' data-toggle='dropdown' aria-haspopup='true' aria-expanded='false'
+            |#{fas 'user'} #{current_user.username}
+          .dropdown-menu.dropdown-menu-right
+            = link_to 'ログアウト', destroy_user_session_path, method: :delete, class: 'dropdown-item'
+      - else
+        ul.navbar-nav
+          li.nav-item
+            = link_to 'ログイン', new_user_session_path, class: 'nav-link', 'data-turbolinks': false
