Add css for select tag

--- a/app/views/root/index.html.slim
+++ b/app/views/root/index.html.slim
@@ -6,6 +6,9 @@ scss:
     button:not(:first-child){
       margin-left: 4px;
     }
+    select:not(:first-child){
+      margin-top: 4px;
+    }
   }
 
   .form-example{
@@ -31,6 +34,19 @@ h3 Button
   button.btn.btn-primary.btn-md middle
   button.btn.btn-primary.btn-lg large
   button.btn.btn-primary normal
+
+hr
+
+h3 Select
+.examples
+  select.form-control.form-control-sm
+    option form-control-sm
+  select.form-control.form-control-md
+    option form-control-md
+  select.form-control.form-control-lg
+    option form-control-lg
+  select.form-control.form-control
+    option form-control
 
 hr
 
