--- a/app/assets/stylesheets/bootstrap/desktop.scss
+++ b/app/assets/stylesheets/bootstrap/desktop.scss
@@ -1,11 +1,13 @@
 .desktop{
 
-  input.form-control:not(.form-control-sm):not(.form-control-md):not(.form-control-lg){
-    height: calc(1.5em + .5rem + 2px);
-    padding: .25rem .5rem;
-    font-size: .875rem;
-    line-height: 1.5;
-    border-radius: .2rem;
+  input, select{
+    &.form-control:not(.form-control-sm):not(.form-control-md):not(.form-control-lg){
+      height: calc(1.5em + .5rem + 2px);
+      padding: .25rem .5rem;
+      font-size: .875rem;
+      line-height: 1.5;
+      border-radius: .2rem;
+    }
   }
 
   .btn:not(.btn-sm):not(.btn-md):not(.btn-lg){
