Add css class form-from-to

--- a/app/views/root/index.html.slim
+++ b/app/views/root/index.html.slim
@@ -116,7 +116,7 @@ h3 Form
   .form-inline
     .form-group
       label date
-      div.d-flex.align-items-center
+      .form-from-to
         input.form-control type='date'
         .mx-2 〜
         input.form-control type='date'
