--- a/app/views/layouts/plain.html.slim
+++ b/app/views/layouts/plain.html.slim
@@ -26,6 +26,8 @@ html
 
     = stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload'
     = javascript_pack_tag 'application', 'data-turbolinks-track': 'reload'
+
+    = yield :header_tags
+
   body
-    .container
-      = yield
+    = yield
