--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -1,5 +1,5 @@
 doctype html
-html
+html lang='ja'
   head
     meta content='text/html; charset=UTF-8' http-equiv='Content-Type'
     meta name='viewport' content='width=device-width, initial-scale=1, shrink-to-fit=no'
