--- a/app/views/devise/registrations/new.html.slim
+++ b/app/views/devise/registrations/new.html.slim
@@ -1,7 +1,7 @@
 h2 Sign up
 
 = form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f|
-  = render 'users/shared/error_messages', resource: resource
+  = render 'devise/shared/error_messages', resource: resource
 
   .field
     = f.label :username
@@ -24,4 +24,4 @@ h2 Sign up
   .actions
     = f.submit 'Sign up'
 
-= render 'users/shared/links'
+= render 'devise/shared/links'
