--- a/app/views/shared/_navbar.html.slim
+++ b/app/views/shared/_navbar.html.slim
@@ -7,6 +7,8 @@ nav.navbar.navbar-expand-lg.navbar-dark.bg-dark
       li.nav-item
         = link_to 'Book List', books_path, class: 'nav-link'
       li.nav-item
+        = link_to 'User List', users_path, class: 'nav-link'
+      li.nav-item
         a.nav-link href='#' Link
       li.nav-item.active
         a.nav-link href='#' Active Link
