Add radio button css

--- a/app/views/root/index.html.slim
+++ b/app/views/root/index.html.slim
@@ -109,7 +109,17 @@ h3 Form
   .form-group
     label
       input type='checkbox'
-      span Check me out
+      span Checkbox
+  .form-group
+    label
+      input type='radio' name='radio'
+      span Radio button1
+    label
+      input type='radio' name='radio'
+      span Radio button2
+    label
+      input type='radio' name='radio'
+      span Radio button3
   button.btn.btn-md.btn-primary type='submit' Submit
 
 .form-example
