--- a/app/views/root/index.html.slim
+++ b/app/views/root/index.html.slim
@@ -109,7 +109,13 @@ h3 Form
   .form-group
     label
       input type='checkbox'
-      span Checkbox
+      span Checkbox1
+    label
+      input type='checkbox'
+      span Checkbox2
+    label
+      input type='checkbox'
+      span Checkbox3
   .form-group
     label
       input type='radio' name='radio'
