--- a/app/assets/stylesheets/checkbox.scss
+++ b/app/assets/stylesheets/checkbox.scss
@@ -80,7 +80,12 @@ label{
   margin-bottom: 0;
 
   input[type='checkbox']{
-    margin-right: 0.5em;
+    margin-right: 0.2em;
+
+    & + span{
+      margin-right: 0.5em;
+    }
+
   }
 
 }
