--- a/app/views/root/index.html.slim
+++ b/app/views/root/index.html.slim
@@ -107,25 +107,27 @@ h3 Form
     label Password
     input.form-control type='password' placeholder='Password'
   .form-group
-    label
-      input type='checkbox'
-      span Checkbox1
-    label
-      input type='checkbox'
-      span Checkbox2
-    label
-      input type='checkbox'
-      span Checkbox3
+    div
+      label
+        input type='checkbox'
+        span Checkbox1
+      label
+        input type='checkbox'
+        span Checkbox2
+      label
+        input type='checkbox'
+        span Checkbox3
   .form-group
-    label
-      input type='radio' name='radio'
-      span Radio button1
-    label
-      input type='radio' name='radio'
-      span Radio button2
-    label
-      input type='radio' name='radio'
-      span Radio button3
+    div
+      label
+        input type='radio' name='radio'
+        span Radio button1
+      label
+        input type='radio' name='radio'
+        span Radio button2
+      label
+        input type='radio' name='radio'
+        span Radio button3
   button.btn.btn-md.btn-primary type='submit' Submit
 
 .form-example
