--- a/app/assets/stylesheets/checkbox.scss
+++ b/app/assets/stylesheets/checkbox.scss
@@ -1,47 +1,42 @@
 input[type='checkbox']{
-  position: relative;
+  appearance: none;
+  -webkit-appearance: none;
+  -moz-appearance: none;
+
   font-size: inherit;
+  position: relative;
   top: 0.2em;
   width: 1.2em;
   height: 1.2em;
   outline: 0;
   margin: 0;
+  background-color: white;
+  border: 1px solid #a9a9a9;
+  border-radius: 0;
+  box-sizing: border-box;
 
-  &::before, &::after{
-    content: '';
-    position: absolute;
-    box-sizing: border-box;
-    // transition-duration: 0.3s;
-  }
-
-  &::before{
-    width: 112%;
-    height: 112%;
-    background-color: white;
-    border: 1px solid rgb(206, 212, 218);
-    top: -8%;
-    left: -6%;
-    transition-duration: 0.2s;
-  }
-
-  &:disabled::before{
-    background-color: #eee;
-  }
-
-  &:not(:disabled):hover::before{
+  &:hover:not(:disabled){
     border-color: #80bdff;
   }
 
-  &:focus::before{
-    box-shadow: 0 0 0 0.1rem rgba(0, 123, 255, 0.25)
+  &:focus{
+    box-shadow: 0 0 0 0.1rem rgba(0, 123, 255, 0.25);
+  }
+
+  &:disabled{
+    background-color: #e0e0e0;
   }
 
   &::after{
+    content: '';
+    position: absolute;
+    box-sizing: border-box;
     width: 0;
     height: 0;
     margin-top: 50%;
     margin-left: 50%;
-    border: 0 solid #222;
+    border-width: 0;
+    border-style: solid;
     opacity: 0;
     transform: scale(0, 0);
   }
@@ -49,12 +44,16 @@ input[type='checkbox']{
   &:checked::after{
     width: 70%;
     height: 30%;
-    margin-top: 47%;
+    margin-top: 50%;
     margin-left: 40%;
-    border-left-width: 0.15em;
-    border-bottom-width: 0.15em;
+    border-left-width: 0.1em;
+    border-bottom-width: 0.1em;
     transform: rotate(-50deg) scale(1, 1);
     transform-origin: left bottom;
+  }
+
+  &:disabled::after{
+    border-color: #555;
   }
 
   &:indeterminate::after{
@@ -66,13 +65,37 @@ input[type='checkbox']{
     transform: scale(1, 1);
   }
 
-  // &:checked::before, &:indeterminate::before{
-  //   background-color: rgb(42, 81, 255);
-  // }
-
   &:checked::after, &:indeterminate::after{
     opacity: 1;
   }
+
+  &.animated{
+    $duration: 0.3s;
+    transition-duration: $duration;
+    &::after{
+      transition-duration: $duration;
+    }
+  }
+
+  @mixin check-color($color){
+    &::after{
+      border-color: $color;
+    }
+    &.inverted:not(:disabled){
+      &:checked, &:indeterminate{
+        background-color: $color;
+        &::after{
+          border-color: white;
+        }
+      }
+    }
+  }
+
+  @include check-color(black);
+
+  &.red{ @include check-color(red); }
+  &.blue{ @include check-color(blue); }
+  &.green{ @include check-color(green); }
 
 }
 
