--- a/app/assets/stylesheets/checkbox.scss
+++ b/app/assets/stylesheets/checkbox.scss
@@ -11,7 +11,7 @@ input[type='checkbox']{
   outline: 0;
   margin: 0;
   background-color: white;
-  border: 1px solid #a9a9a9;
+  border: 1px solid #c0c0c0;
   border-radius: 0;
   box-sizing: border-box;
 
