--- a/app/views/devise/registrations/new.html.slim
+++ b/app/views/devise/registrations/new.html.slim
@@ -1,27 +1,33 @@
-h2 Sign up
 
-= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f|
-  = render 'devise/shared/error_messages', resource: resource
+- content_for :header_tags
+  = stylesheet_link_tag 'login', media: 'all', 'data-turbolinks-track': 'reload'
 
-  .field
-    = f.label :username
-    br
-    = f.text_field :username, autofocus: true, required: true
+.login-container
 
-  .field
-    = f.label :password
-    - if @minimum_password_length
-      em
-        | (#{@minimum_password_length} characters minimum)
-    br
-    = f.password_field :password, autocomplete: 'new-password'
+  .login-form
 
-  .field
-    = f.label :password_confirmation
-    br
-    = f.password_field :password_confirmation, autocomplete: 'new-password'
+    h2 Sign up
 
-  .actions
-    = f.submit 'Sign up'
+    = render 'devise/shared/error_messages', resource: resource
 
-= render 'devise/shared/links'
+    = form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f|
+
+      .form-group
+        = f.label :username
+        = f.text_field :username, autofocus: true, required: true, class: 'form-control'
+
+      .form-group
+        = f.label :password
+        - if @minimum_password_length
+          em
+            | (#{@minimum_password_length} characters minimum)
+        = f.password_field :password, class: 'form-control'
+
+      .form-group
+        = f.label :password_confirmation
+        = f.password_field :password_confirmation, class: 'form-control'
+
+      .form-group
+        = f.submit 'Sign up', class: 'btn btn-primary w-100'
+
+    = render 'devise/shared/links'
