--- a/app/views/books/index.html.slim
+++ b/app/views/books/index.html.slim
@@ -9,7 +9,7 @@
   div
     = new_link_to 'New', new_book_path
 
-= render_with_pagination @books do |books|
+= render_with_pagination @books.includes(:create_user) do |books|
   .table-sticky.max-vh-70
     table.table.table-striped.table-hover
       thead
@@ -23,6 +23,12 @@
           th
             = sort_link_to :release_date
               span Release date
+          th
+            = sort_link_to :create_user
+              span Create user
+          th
+            = sort_link_to :updated_at
+              span Updated at
           th colspan=2
       tbody
         - books.each do |book|
@@ -30,6 +36,8 @@
             td.sticky-left= book.name
             td= book.price
             td= book.release_date
+            td= book.create_user_name
+            td= format_datetime book.updated_at
             td.btn-cell= edit_link_to 'Edit', edit_book_path(book)
             td.btn-cell= delete_link_to 'Delete', book
 
