--- a/app/views/layouts/plain.html.slim
+++ b/app/views/layouts/plain.html.slim
@@ -9,7 +9,7 @@ html lang='ja'
     = csrf_meta_tags
     = csp_meta_tag
 
-    script src='//unpkg.com/current-device/umd/current-device.min.js'
+    script src='//unpkg.com/current-device@0.9.1/umd/current-device.min.js'
 
     link rel='stylesheet' href='//stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css' integrity='sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T' crossorigin='anonymous'
     - if defined? Rack::MiniProfiler
