Add change current user password test

--- a/app/views/users/_form.html.slim
+++ b/app/views/users/_form.html.slim
@@ -28,4 +28,4 @@
     .form-inline.form-group
       = form.label :password
       = form.password_field :password, required: true
-    = form.submit
+    = form.submit name: 'commit_password'
