--- a/app/assets/stylesheets/login.scss
+++ b/app/assets/stylesheets/login.scss
@@ -8,7 +8,15 @@
 
 .login-form{
   background-color: #fff;
-  padding: 4rem;
-  min-width: 30rem;
+  padding: 2rem;
   box-shadow: 2px 2px 4px rgba(0, 0, 0, 0.4);
+}
+
+@media screen and (min-width: 768px) {
+
+  .login-form {
+    min-width: 30rem;
+    padding: 4rem;
+  }
+
 }
