--- a/app/views/settings/users/_form.html.slim
+++ b/app/views/settings/users/_form.html.slim
@@ -1,4 +1,4 @@
-= form_with(model: user, local: true) do |form|
+= form_with(model: [:settings, user], local: true) do |form|
   = hidden_referrer
   .form-row
     .form-group
@@ -22,7 +22,7 @@
 
   h4.mb-3 パスワード変更
 
-  = form_with(model: user, local: true) do |form|
+  = form_with(model: [:settings, user], local: true) do |form|
     = hidden_referrer
 
     .form-inline.form-group
