--- a/app/views/shared/_navbar.html.slim
+++ b/app/views/shared/_navbar.html.slim
@@ -7,7 +7,7 @@ nav.navbar.navbar-expand-lg.navbar-dark.bg-dark
       li.nav-item
         = link_to 'Book List', books_path, class: 'nav-link'
       li.nav-item
-        = link_to 'User List', users_path, class: 'nav-link'
+        = link_to 'User List', settings_users_path, class: 'nav-link'
       li.nav-item
         a.nav-link href='#' Link
       li.nav-item.active
