Move example page

--- a/app/views/root/index.html.slim
+++ b/app/views/root/index.html.slim
@@ -1,150 +1,5 @@
-scss:
-  .examples{
-    input:not(:first-child){
-      margin-top: 4px;
-    }
-    button:not(:first-child){
-      margin-left: 4px;
-    }
-    select:not(:first-child){
-      margin-top: 4px;
-    }
-  }
+h3 管理メニュー
 
-  .form-example{
-    border: 2px solid #dee2e6;
-    padding: 1rem;
-    margin-bottom: 1rem;
-  }
-
-h2 Examples
-
-h3 Input
-.examples
-  input.form-control.form-control-sm placeholder='form-control-sm'
-  input.form-control.form-control-md placeholder='form-control-md'
-  input.form-control.form-control-lg placeholder='form-control-lg'
-  input.form-control placeholder='form-control'
-
-hr
-
-h3 Button
-.examples
-  button.btn.btn-primary.btn-sm small
-  button.btn.btn-primary.btn-md middle
-  button.btn.btn-primary.btn-lg large
-  button.btn.btn-primary normal
-
-hr
-
-h3 Select
-.examples
-  select.form-control.form-control-sm
-    option form-control-sm
-  select.form-control.form-control-md
-    option form-control-md
-  select.form-control.form-control-lg
-    option form-control-lg
-  select.form-control.form-control
-    option form-control
-
-hr
-
-h3 Table
-.examples
-  div
-    label small
-    table.table.table-sm
-      thead
-        tr
-          th id
-          th name
-          th value
-      tbody
-        - 1.upto 5 do |i|
-          tr
-            td= i
-            td= "name#{i}"
-            td= "value#{i}"
-  div
-    label middle
-    table.table.table-md
-      thead
-        tr
-          th id
-          th name
-          th value
-      tbody
-        - 1.upto 5 do |i|
-          tr
-            td= i
-            td= "name#{i}"
-            td= "value#{i}"
-  div
-    label normal
-    table.table
-      thead
-        tr
-          th id
-          th name
-          th value
-      tbody
-        - 1.upto 5 do |i|
-          tr
-            td= i
-            td= "name#{i}"
-            td= "value#{i}"
-
-hr
-
-h3 Form
-
-.form-example
-  .form-group
-    label Email address
-    input.form-control type='email' placeholder='Enter email'
-  .form-group
-    label Password
-    input.form-control type='password' placeholder='Password'
-  .form-group
-    div
-      label
-        input type='checkbox'
-        span Checkbox1
-      label
-        input type='checkbox'
-        span Checkbox2
-      label
-        input type='checkbox'
-        span Checkbox3
-  .form-group
-    div
-      label
-        input type='radio' name='radio'
-        span Radio button1
-      label
-        input type='radio' name='radio'
-        span Radio button2
-      label
-        input type='radio' name='radio'
-        span Radio button3
-  button.btn.btn-md.btn-primary type='submit' Submit
-
-.form-example
-  .form-inline
-    .form-group
-      label date
-      .form-from-to
-        input.form-control type='date'
-        .mx-2 〜
-        input.form-control type='date'
-    .form-group
-      button.btn.btn-dark today
-      button.btn.btn-dark week
-      button.btn.btn-dark month
-  .form-inline
-    - 1.upto 5 do |i|
-      .form-group
-        label input#{i}
-        input.form-control
-  button.btn.btn-md.btn-primary type='submit' Submit
+ul
+  li= link_to 'ユーザ一覧', settings_users_path
+  li= link_to 'お知らせ一覧', settings_notices_path
