Fix navbar title

--- a/app/views/shared/_navbar.html.slim
+++ b/app/views/shared/_navbar.html.slim
@@ -1,5 +1,5 @@
 nav.navbar.navbar-expand-lg.navbar-dark.bg-dark
-  a.navbar-brand href='/' Navbar
+  a.navbar-brand href='/' = t 'views.title'
   button.navbar-toggler type='button' data-target='#navbarToggler' data-toggle='collapse'
     span.navbar-toggler-icon
   #navbarToggler.collapse.navbar-collapse
