--- a/app/views/root/index.html.slim
+++ b/app/views/root/index.html.slim
@@ -1,5 +1,24 @@
-h3 管理メニュー
+.row
 
-ul
-  li= link_to 'ユーザ一覧', settings_users_path
-  li= link_to 'お知らせ一覧', settings_notices_path
+  .col-sm
+
+    h3 管理メニュー
+
+    ul
+      li= link_to 'ユーザ一覧', settings_users_path
+      li= link_to 'お知らせ一覧', settings_notices_path
+
+  .col-sm
+
+    h3 お知らせ
+
+    - if @notices.empty?
+      .alert.alert-info お知らせがまだ登録されていません
+    - else
+
+      .notice.vh-80 style='overflow-y: scroll;'
+
+        = render @notices.includes(:update_user)
+
+        - if @notices.next_page.present?
+          .notice-more= link_to 'もっと見る', notices_path(page: @notices.next_page)
