Create table items

--- a/app/views/root/index.html.slim
+++ b/app/views/root/index.html.slim
@@ -7,6 +7,7 @@
     ul
       li= link_to 'ユーザ一覧', settings_users_path
       li= link_to 'お知らせ一覧', settings_notices_path
+      li= link_to '商品一覧', settings_items_path
 
   .col-sm
 
