--- a/app/views/shared/_navbar.html.slim
+++ b/app/views/shared/_navbar.html.slim
@@ -25,4 +25,4 @@ nav.navbar.navbar-expand-lg.navbar-dark.bg-dark
       - else
         ul.navbar-nav
           li.nav-item
-            = link_to 'ログイン', new_user_session_path, class: 'nav-link', 'data-turbolinks': false
+            = link_to 'ログイン', new_user_session_path, class: 'nav-link'
