--- a/app/views/shared/_head_tags.html.slim
+++ b/app/views/shared/_head_tags.html.slim
@@ -16,5 +16,5 @@ script src='//stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js' in
 / link rel='stylesheet' href='//use.fontawesome.com/releases/v5.7.2/css/all.css' integrity='sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr'
 link rel='stylesheet' href='//use.fontawesome.com/releases/v5.7.2/css/all.css'
 
-= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload'
-= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload'
+= stylesheet_link_tag 'application', media: 'all'
+= javascript_pack_tag 'application'
