--- a/app/views/orders/_form.html.slim
+++ b/app/views/orders/_form.html.slim
@@ -1,8 +1,25 @@
-= form_with(model: order, local: true) do |f|
-  = hidden_referrer
-  #app
+#app[v-cloak]
+
+  = form_with(model: order, local: true) do |f|
+    = hidden_referrer
     order-form(v-model='order' :items='items')
-  = f.submit
+    = f.submit
+
+    - unless order.new_record?
+      .mt-4
+        dl.attributes.attributes-small
+          div
+            dt 作成者
+            dd= order.create_user_name
+          div
+            dt 作成日時
+            dd= format_datetime order.created_at
+          div
+            dt 更新者
+            dd= order.update_user_name
+          div
+            dt 更新日時
+            dd= format_datetime order.updated_at
 
 / = form_with(model: order, local: true) do |f|
 /   = hidden_referrer
@@ -28,21 +45,5 @@
 /           td= ff.number_field :quantity
 
 /   = f.submit
-
-- unless order.new_record?
-  .mt-4
-    dl.attributes.attributes-small
-      div
-        dt 作成者
-        dd= order.create_user_name
-      div
-        dt 作成日時
-        dd= format_datetime order.created_at
-      div
-        dt 更新者
-        dd= order.update_user_name
-      div
-        dt 更新日時
-        dd= format_datetime order.updated_at
 
 = javascript_pack_tag 'orders/form'
