--- a/app/views/shared/_navbar.html.slim
+++ b/app/views/shared/_navbar.html.slim
@@ -16,7 +16,7 @@ nav.navbar.navbar-expand-lg.navbar-dark.bg-dark
           button.btn.btn-md.btn-secondary.dropdown-toggle type='button' data-toggle='dropdown' aria-haspopup='true' aria-expanded='false'
             |#{fas 'user'} #{current_user.username}
           .dropdown-menu.dropdown-menu-right
-            = link_to 'ユーザー情報変更', edit_user_path, class: 'dropdown-item'
+            = link_to 'ユーザー情報変更', edit_profile_path, class: 'dropdown-item'
             = link_to 'ログアウト', destroy_user_session_path, method: :delete, class: 'dropdown-item'
       - else
         ul.navbar-nav
