--- a/app/views/settings/notices/_form.html.slim
+++ b/app/views/settings/notices/_form.html.slim
@@ -1,4 +1,4 @@
-= form_with(model: [:settings, notice], local: true) do |form|
+= form_with(model: [:settings, notice]) do |form|
   = hidden_referrer
   .form-group
     = form.label 'タイトル'
