--- a/app/views/books/_form.html.slim
+++ b/app/views/books/_form.html.slim
@@ -1,4 +1,4 @@
-= form_with(model: book, local: true) do |form|
+= form_with(model: book) do |form|
   = hidden_referrer
   .form-row
     .form-group
