--- a/app/views/settings/items/_form.html.slim
+++ b/app/views/settings/items/_form.html.slim
@@ -1,4 +1,4 @@
-= form_with(model: [:settings, item], local: true) do |form|
+= form_with(model: [:settings, item]) do |form|
   = hidden_referrer
   .form-row
     .form-group
