--- a/app/views/orders/index.html.slim
+++ b/app/views/orders/index.html.slim
@@ -19,30 +19,23 @@
   div
     = new_link_to 'New', new_order_path
 
-= render_with_pagination @orders.includes(:update_user) do |orders|
+= render_with_pagination @orders do |orders|
   .table-sticky.max-vh-70
     table.table.table-striped.table-hover
       thead
         tr
-          th
-            = sort_link_to :date
-              span Date
-          th
-            = sort_link_to :total_price
-              span Total price
-          th
-            = sort_link_to :update_user
-              span Update user
-          th
-            = sort_link_to :updated_at
-              span Updated at
+          th= sort_link_to :date
+            |Date
+          th= sort_link_to :total_price
+            |Total price
+          th= sort_link_to :updated_at
+            |Updated at
           th colspan=2
       tbody
         - orders.each do |order|
           tr
             td= format_date order.date
             td= format_number order.total_price
-            td= order.update_user_name
             td= format_datetime order.updated_at
             td.btn-cell= edit_link_to 'Edit', edit_order_path(order)
             td.btn-cell= delete_link_to 'Delete', order
