--- a/app/views/kaminari/_page_entries_info.html.slim
+++ b/app/views/kaminari/_page_entries_info.html.slim
@@ -6,12 +6,13 @@
 - else
   ruby:
     offset = (page.current_page - 1) * page.limit_value
-    if page.count.is_a?(Hash)
-      # groupを使うとcountの結果がHashで返ってくる
-      count = page.count.count
-    else
-      count = page.count
+    count = page.count
+
+    # groupを使うとcountの結果がHashで返ってくる
+    if count.is_a?(Hash)
+      count = count.count
     end
+
   div
     span= "#{format_number page.total_count}件中、"
     span= "#{format_number offset + 1}〜#{format_number offset + count}件を表示"
