--- a/app/views/shared/_head_tags.html.slim
+++ b/app/views/shared/_head_tags.html.slim
@@ -17,4 +17,4 @@ script src='//stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js' in
 link rel='stylesheet' href='//use.fontawesome.com/releases/v5.7.2/css/all.css'
 
 = stylesheet_link_tag 'application', media: 'all'
-= javascript_pack_tag 'application'
+= javascript_packs_with_chunks_tag 'application'
