--- a/app/views/shared/_head_tags.html.slim
+++ b/app/views/shared/_head_tags.html.slim
@@ -1,5 +1,5 @@
 
-script src='//unpkg.com/current-device@0.9.1/umd/current-device.min.js'
+script src='https://cdn.jsdelivr.net/npm/current-device@0.10.2/umd/current-device.min.js' integrity='sha256-yNdOqJNlBuMlntSjBOpJhakslW2p4je2Y3iqITkZwr4=' crossorigin='anonymous'
 
 link rel='stylesheet' href='//stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css' integrity='sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh' crossorigin='anonymous'
 
