--- a/app/views/settings/notices/_form.html.slim
+++ b/app/views/settings/notices/_form.html.slim
@@ -15,3 +15,7 @@
       = form.datetime_field :publish_end_datetime
 
   = form.submit
+
+- unless notice.new_record?
+  .mt-4
+    = render 'shared/housekeeping', record: notice
