--- a/app/views/settings/items/_form.html.slim
+++ b/app/views/settings/items/_form.html.slim
@@ -14,16 +14,4 @@
 
 - unless item.new_record?
   .mt-4
-    dl.attributes.attributes-small
-      div
-        dt 作成者
-        dd= item.create_user_name
-      div
-        dt 作成日時
-        dd= format_datetime item.created_at
-      div
-        dt 更新者
-        dd= item.update_user_name
-      div
-        dt 更新日時
-        dd= format_datetime item.updated_at
+    = render 'shared/housekeeping', record: item
