--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -21,7 +21,7 @@ html lang='ja'
     - if content_for? :container_class
       - container_class = yield :container_class
     - else
-      - container_class = %w(container mt-3)
+      - container_class = %w(container mt-3 print-mt-01)
 
     = tag.div(class: container_class)
       = render 'shared/flash_message'
