--- a/app/views/books/index.html.slim
+++ b/app/views/books/index.html.slim
@@ -9,7 +9,10 @@
   div
     = new_link_to 'New', new_book_path
 
-= render_with_pagination @books.includes(:update_user) do |books|
+ruby:
+  books = @books.preload(:update_user)
+
+= render_with_pagination books do |books|
   .table-sticky.max-vh-70
     table.table.table-striped.table-hover
       thead
