--- a/app/views/settings/items/index.html.slim
+++ b/app/views/settings/items/index.html.slim
@@ -10,7 +10,7 @@
     = new_link_to 'New', new_settings_item_path
 
 ruby:
-  items = @items.includes(:create_user, :update_user)
+  items = @items.preload(:update_user)
 
 = render_with_pagination items do |items|
   .table-sticky.max-vh-70
@@ -23,10 +23,6 @@ ruby:
             |Furigana
           th= sort_link_to :price
             |Price
-          th= sort_link_to :create_user
-            |Create user
-          th= sort_link_to :created_at
-            |Created at
           th= sort_link_to :update_user
             |Update user
           th= sort_link_to :updated_at
@@ -38,8 +34,6 @@ ruby:
             td= item.name
             td= item.furigana
             td= item.price
-            td= item.create_user_name
-            td= format_datetime item.created_at
             td= item.update_user_name
             td= format_datetime item.updated_at
             td.btn-cell= edit_link_to 'Edit', edit_settings_item_path(item)
