--- a/app/views/settings/notices/_form.html.slim
+++ b/app/views/settings/notices/_form.html.slim
@@ -9,10 +9,10 @@
   .form-row
     .form-group
       = form.label '公開開始日時'
-      = form.datetime_field :publish_start_datetime
+      = form.datetime_field :publish_start_datetime, step: 1
     .form-group
       = form.label '公開終了日時'
-      = form.datetime_field :publish_end_datetime
+      = form.datetime_field :publish_end_datetime, step: 1
 
   = form.submit
 
