--- a/app/assets/stylesheets/bootstrap/table.scss
+++ b/app/assets/stylesheets/bootstrap/table.scss
@@ -6,6 +6,9 @@ $border-color: #dee2e6;
     &.btn-cell{
       padding: 2px !important;
       vertical-align: middle;
+      .btn{
+        margin: auto 4px;
+      }
     }
 
   }
