--- a/app/views/books/index.html.slim
+++ b/app/views/books/index.html.slim
@@ -14,25 +14,20 @@ ruby:
 
 = render_with_pagination books do |books|
   .table-sticky.max-vh-70
-    table.table.table-striped.table-hover
+    table.table.table-striped.table-hover.table-bordered
       thead
         tr
-          th.sticky-left
-            = sort_link_to :name
-              span Name
+          th.sticky-left= sort_link_to :name
+            |Name
+          th= sort_link_to :price
+            |Price
+          th= sort_link_to :release_date
+            |Release date
+          th= sort_link_to :update_user
+            |Update user
+          th= sort_link_to :updated_at
+            |Updated at
           th
-            = sort_link_to :price
-              span Price
-          th
-            = sort_link_to :release_date
-              span Release date
-          th
-            = sort_link_to :update_user
-              span Update user
-          th
-            = sort_link_to :updated_at
-              span Updated at
-          th colspan=2
       tbody
         - books.each do |book|
           tr
@@ -41,8 +36,9 @@ ruby:
             td= book.release_date
             td= book.update_user_name
             td= format_datetime book.updated_at
-            td.btn-cell= edit_link_to 'Edit', edit_book_path(book)
-            td.btn-cell= delete_link_to 'Delete', book
+            td.btn-cell
+              = edit_link_to 'Edit', edit_book_path(book)
+              = delete_link_to 'Delete', book
 
 - if @books.any?
   .d-flex.align-items-baseline
