--- a/app/views/settings/notices/index.html.slim
+++ b/app/views/settings/notices/index.html.slim
@@ -13,22 +13,18 @@
 
 = render_with_pagination @notices do |notices|
   .table-sticky.max-vh-70
-    table.table.table-striped.table-hover
+    table.table.table-striped.table-hover.table-bordered
       thead
         tr
+          th= sort_link_to :title
+            |タイトル
+          th= sort_link_to :body
+            |本文
+          th= sort_link_to :publish_start_datetime
+            |公開開始日時
+          th= sort_link_to :updated_at
+            |更新日時
           th
-            = sort_link_to :title
-              span タイトル
-          th
-            = sort_link_to :body
-              span 本文
-          th
-            = sort_link_to :publish_start_datetime
-              span 公開開始日時
-          th
-            = sort_link_to :updated_at
-              span 更新日時
-          th colspan=2
       tbody
         - notices.each do |notice|
           tr
@@ -36,5 +32,6 @@
             td= notice.body&.truncate 30
             td= format_datetime notice.publish_start_datetime
             td= format_datetime notice.updated_at
-            td.btn-cell= edit_link_to '編集', edit_settings_notice_path(notice)
-            td.btn-cell= delete_link_to '削除', settings_notice_path(notice)
+            td.btn-cell
+              = edit_link_to '編集', edit_settings_notice_path(notice)
+              = delete_link_to '削除', settings_notice_path(notice)
