--- a/app/views/settings/users/index.html.slim
+++ b/app/views/settings/users/index.html.slim
@@ -13,26 +13,23 @@
 
 = render_with_pagination @users do |users|
   .table-sticky.max-vh-70
-    table.table.table-striped.table-hover
+    table.table.table-striped.table-hover.table-bordered
       thead
         tr
+          th= sort_link_to :username
+            |ユーザ名
+          th= sort_link_to :name
+            |氏名
+          th= sort_link_to :furigana
+            |ふりがな
           th
-            = sort_link_to :username
-              span ユーザ名
-          th
-            = sort_link_to :name
-              span 氏名
-          th
-            = sort_link_to :furigana
-              span ふりがな
-          th colspan=2
       tbody
         - users.each do |user|
           tr
             td= user.username
             td= user.name
             td= user.furigana
-            td.btn-cell= edit_link_to '編集', edit_settings_user_path(user)
             td.btn-cell
+              = edit_link_to '編集', edit_settings_user_path(user)
               - unless user.admin?
                 = delete_link_to '削除', settings_user_path(user)
