Add stylesheet for cursor

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -18,6 +18,7 @@
 @import './bootstrap/table';
 @import './attributes';
 @import './checkbox';
+@import './cursor';
 @import './form';
 @import './notice';
 @import './print';
