--- a/app/views/orders/index.html.slim
+++ b/app/views/orders/index.html.slim
@@ -17,7 +17,7 @@
         = submit_tag '検索', class: 'btn btn-info'
 
   div
-    = new_link_to 'New', new_order_path
+    = new_link_to 'New', url_for(action: :new)
 
 = render_with_pagination @orders do |orders|
   .table-sticky.max-vh-70
